--- a/src/components/Home/SignUp.css
+++ b/src/components/Home/SignUp.css
@@ -159,56 +159,24 @@
   cursor: pointer;
 }
 
-.signup-section {
+.login-bottom .login-btn:hover {
+  transition: 0.5s;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
+}
+
+.img-section {
   width: 350px;
   height: 600px;
   background-color: #3773d4;
-  border-radius: 0 30px 30px 0;
+  border-radius: 30px 0 0 30px;
   box-sizing: border-box;
   padding-top: 160px;
 }
 
-.signup-title,
-.signup-body,
-.signup-btn {
+.img-section .img {
+  border: 10px solid #ffffff;
+  width: 250px;
+  height: 250px;
+  border-radius: 100%;
   margin: 0 auto;
-  display: block;
-  text-align: center;
-  font-family: "Noto Sans";
-}
-
-.signup-title,
-.signup-body {
-  color: #f7f7fa;
-  margin-bottom: 50px;
-}
-
-.signup-title {
-  width: 190px;
-  height: 98px;
-  font-size: 40px;
-  font-weight: 700;
-  line-height: 1.2;
-}
-
-.signup-body {
-  font-size: 15px;
-}
-
-.signup-btn {
-  box-sizing: border-box;
-  width: 200px;
-  height: 60px;
-  border-radius: 500px;
-  text-decoration: none;
-  font-size: 25px;
-  line-height: 58px;
-  background-color: #ffffff;
-  color: #3773d4;
-}
-
-.signup-btn:hover,
-.login-bottom .login-btn:hover {
-  transition: 0.5s;
-  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.3);
 }
