--- a/src/routes/NonUsers/Login.css
+++ b/src/routes/NonUsers/Login.css
@@ -1,3 +1,78 @@
 .non-users .login .sub {
   border-radius: 0 30px 30px 0;
 }
+
+.non-users .login-icons .icon {
+  box-sizing: border-box;
+  width: 65px;
+  height: 65px;
+  margin: 0 15px;
+  border-radius: 100%;
+  display: inline-block;
+  line-height: 67px;
+  font-size: 30px;
+  color: white;
+}
+
+.non-users .login-icons .icon:first-child {
+  background-color: #38569d;
+}
+
+.non-users .login-icons .icon:last-child {
+  background-color: #e24033;
+}
+
+.non-users .login-icons .icon:hover {
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
+  background: #ffffff;
+  transition: 0.5s;
+}
+
+.non-users .login-icons .icon:first-child:hover {
+  color: #38569d;
+}
+
+.non-users .login-icons .icon:last-child:hover {
+  color: #e24033;
+}
+
+.non-users .login .bottom a {
+  font-size: 15px;
+  font-weight: 700;
+  color: #3773d4;
+  display: block;
+  margin-bottom: 25px;
+}
+
+.non-users .login .login-btn {
+  width: 330px;
+  background-color: #3773d4;
+  color: white;
+}
+
+.non-users .login .sub .title {
+  margin-top: 160px;
+  margin-bottom: 50px;
+  width: 190px;
+  font-size: 40px;
+  font-weight: 700;
+  line-height: 1.2;
+}
+
+.non-users .login .sub .body {
+  font-size: 18px;
+  font-weight: 400;
+  line-height: 1.2;
+}
+
+.non-users .login .sub .toSignup-btn {
+  display: block;
+  background-color: #ffffff;
+  color: #3773d4;
+  width: 250px;
+  line-height: 60px;
+  text-align: center;
+  text-decoration: none;
+  margin: 0 auto;
+  margin-top: 50px;
+}
