--- a/src/routes/NonUsers/Signup.css
+++ b/src/routes/NonUsers/Signup.css
@@ -1,3 +1,60 @@
 .non-users .signup .sub {
   border-radius: 30px 0 0 30px;
 }
+
+.non-users .signup .bottom {
+  width: 100%;
+}
+.non-users .signup .warning-msg {
+  margin: 0 auto 20px auto;
+  width: 500px;
+  height: 20px;
+  font-family: "Noto Sans";
+  font-size: 17px;
+  line-height: 1.2;
+  color: #ff1010;
+}
+
+.non-users .signup .bottom .btn {
+  width: 250px;
+  margin: 0 10px;
+  color: white;
+  font-family: "Noto Sans";
+}
+
+.non-users .signup .signup-btn {
+  background-color: #3773d4;
+}
+
+.non-users .signup .signupCancel-btn {
+  background-color: #5e5e5e;
+}
+
+.non-users .signup .sub .img-wrapper {
+  width: 250px;
+  height: 250px;
+  margin: 50% auto;
+  position: relative;
+}
+
+.non-users .signup .sub .img-profile {
+  position: absolute;
+  width: 250px;
+  height: 250px;
+  border: 10px solid #ffffff;
+  border-radius: 100%;
+  box-sizing: border-box;
+  box-shadow: 0 3px 15px 0 rgba(0, 0, 0, 0.7);
+  background: url("../../img/profileImg-test.jpg") center/250px no-repeat;
+}
+
+.non-users .signup .sub .btn-upload {
+  position: absolute;
+  width: 70px;
+  height: 70px;
+  border-radius: 100%;
+  background: url("../../img/btn-upload.png") center/70px no-repeat;
+  box-shadow: 0 0px 10px 0 rgba(0, 0, 0, 0.7);
+  right: 0;
+  bottom: 0;
+}
