--- a/src/components/NonUsers/index.css
+++ b/src/components/NonUsers/index.css
@@ -41,7 +41,7 @@
 }
 
 .non-users .main .header .title {
-  font-family: Roboto;
+  font-family: Roboto, sans-serif;
   font-size: 60px;
   font-weight: 900;
   color: #3773d4;
@@ -55,11 +55,11 @@
 }
 
 .non-users .main .header .sub-title span:first-child {
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
 }
 
 .non-users .main .header .sub-title span:last-child {
-  font-family: "Roboto";
+  font-family: "Roboto", sans-serif;
 }
 
 .non-users input {
@@ -117,7 +117,7 @@
 .non-users .sub div {
   margin: 0 auto;
   text-align: center;
-  font-family: "Noto Sans";
+  font-family: "Noto Sans", sans-serif;
   color: #ffffff;
 }
 
