[publishing] Dashboard CSS 작성

--- a/src/components/Navigation/index.css
+++ b/src/components/Navigation/index.css
@@ -4,6 +4,7 @@
   line-height: 80px;
   background-color: #3773d4;
   text-align: center;
+  margin-bottom: 15px;
 }
 
 .navigation .wrapper {
@@ -106,4 +107,3 @@
 .nav-profile .logout:hover {
   visibility: visible;
 }
-
