--- a/src/components/NonUsers/index.css
+++ b/src/components/NonUsers/index.css
@@ -4,6 +4,7 @@
   margin: 150px auto;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.16);
   border-radius: 30px;
+  background-color: #ffffff;
 }
 
 .non-users > div {
