--- a/src/components/Users/index.css
+++ b/src/components/Users/index.css
@@ -1,6 +1,7 @@
 .users {
-  border: 1px solid red;
+  border: 1px solid #ff0000;
   width: 1200px;
-  /* height: 100vh; */
+  /* height: 100px; */
   margin: 0 auto;
+  overflow: hidden;
 }
