--- a/src/components/Users/index.css
+++ b/src/components/Users/index.css
@@ -1,7 +1,10 @@
 .users {
-  border: 1px solid #ff0000;
   width: 1200px;
   /* height: 100px; */
   margin: 0 auto;
+  overflow: hidden;
+}
+
+.users > div {
   overflow: hidden;
 }
