[publishing] 라이딩 일지 주간

--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -34,6 +34,7 @@
   height: 90px;
   margin-left: 40px;
   margin-right: 210px;
+  font-family: "Noto Sans", sans-serif;
 }
 
 .nav-menus .nav-menu {
