--- a/src/components/Users/RidingRoute/Show.css
+++ b/src/components/Users/RidingRoute/Show.css
@@ -223,3 +223,23 @@
 .route-show .rank span:nth-child(5) {
   width: 150px;
 }
+
+.route-show .rank .user-rank-wrapper {
+  height: 250px;
+  overflow: auto;
+  width: 750px;
+}
+
+.route-show .rank .user-rank-wrapper::-webkit-scrollbar {
+  width: 10px;
+}
+
+.route-show .rank .user-rank-wrapper::-webkit-scrollbar-thumb {
+  background-color: #373a44;
+  border-radius: 10px;
+}
+
+.route-show .rank .user-rank-wrapper::-webkit-scrollbar-track {
+  background-color: #e1e1ea;
+  border-radius: 10px;
+}
