--- a/src/components/Users/RidingRecord/List.css
+++ b/src/components/Users/RidingRecord/List.css
@@ -95,6 +95,12 @@
   font-family: "Noto Sans", sans-serif;
   font-size: 20px;
 }
+
+.record-list .records li:hover {
+  background-color: #e9e9e9;
+  transition: 0.5s;
+}
+
 .record-list .records .fas {
   font-size: 20px;
   color: #ffbf00;
