--- a/src/components/Users/RidingRoute/RouteList.css
+++ b/src/components/Users/RidingRoute/RouteList.css
@@ -26,9 +26,15 @@
 }
 
 .route-list li {
+  box-sizing: border-box;
   overflow: hidden;
   border-bottom: 1px solid #d5d5d5;
   width: 99%;
+}
+
+.route-list li:hover {
+  background-color: #e9e9e9;
+  transition: 0.5s;
 }
 
 .route-list li > div {
@@ -65,6 +71,19 @@
   width: 100%;
   height: 35px;
   line-height: 20px;
+}
+
+.route-list .etc .fas {
+  font-size: 18px;
+  margin-right: 10px;
+}
+
+.route-list .etc .fa-heart {
+  color: red;
+}
+
+.route-list .etc .fa-biking {
+  color: #3773d4;
 }
 
 .route-list li .etc .like {
