--- a/src/components/item/ChartStats.css
+++ b/src/components/item/ChartStats.css
@@ -5,6 +5,11 @@
   border-bottom: 1px solid #e1e1ea;
 }
 
+.chart-content:hover {
+  background-color: #e9e9e9;
+  transition: 0.5s;
+}
+
 .chart-content > div {
   float: left;
   height: 160px;
