--- a/src/components/NonUsers/NonUsers.css
+++ b/src/components/NonUsers/NonUsers.css
@@ -42,7 +42,7 @@
 }
 
 .non-users .main .header .title {
-  font-family: Roboto, sans-serif;
+  font-family: "Roboto", sans-serif;
   font-size: 60px;
   font-weight: 900;
   color: #3773d4;
