--- a/src/components/Navigation/Navigation.css
+++ b/src/components/Navigation/Navigation.css
@@ -93,18 +93,27 @@
 }
 
 .nav-profile .logout {
-  margin: 30px 0 0 45px;
-  width: 120px;
-  height: 50px;
-  line-height: 50px;
-  background-color: white;
+  margin: 50px 0 0 100px;
+  width: 0;
+  height: 0;
   text-align: center;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.5);
   color: #5e5e5e;
   visibility: hidden;
+  border: none;
+  font-size: 15px;
+  font-family: "Noto Sans", sans-serif;
+  cursor: pointer;
+  overflow: hidden;
+  transition: 0.5s;
+  background-color: #3773d4;
+  outline: none;
 }
 
 .nav-profile .dropdown:hover + .logout,
 .nav-profile .logout:hover {
   visibility: visible;
+  background-color: white;
+  width: 120px;
+  height: 50px;
 }
