--- a/src/components/Users/RidingRoute/pages/Show.css
+++ b/src/components/Users/RidingRoute/pages/Show.css
@@ -120,7 +120,7 @@
 .route-show .section .info > .bottom .right .record-value .img {
   width: 80px;
   height: 80px;
-  background: url("../../../img/profileImg-test.jpg") center/80px no-repeat;
+  background: url("../../../../img/profileImg-test.jpg") center/80px no-repeat;
   border-radius: 100%;
   margin-right: 20px;
 }
