--- a/src/components/Users/RidingRecord/pages/Main.css
+++ b/src/components/Users/RidingRecord/pages/Main.css
@@ -49,10 +49,17 @@
   float: left;
   /* display: inline-block; */
   height: 10px;
-  width: 80px;
   line-height: 80px;
   font-family: "Noto Sans", sans-serif;
   font-weight: 600;
+  cursor: pointer;
+  margin-right: 25px;
+  transition: 0.5s;
+}
+
+.users .header .legend-section > div:hover {
+  font-size: 18px;
+  text-decoration: underline;
 }
 
 .users .header .legend-section > div::before {
@@ -82,6 +89,7 @@
 
 .users .header .legend-section > div:nth-child(3) {
   color: #44a2eb;
+  /* width: 80px; */
 }
 .users .header .legend-section > div:nth-child(3)::before {
   background-color: #44a2eb;
