--- a/src/components/Users/RidingRecord/pages/Main.css
+++ b/src/components/Users/RidingRecord/pages/Main.css
@@ -43,6 +43,7 @@
 .users .header .legend-section {
   width: 260px;
   right: 40px;
+  height: 70px;
 }
 
 .users .header .legend-section > div {
@@ -54,12 +55,7 @@
   font-weight: 600;
   cursor: pointer;
   margin-right: 25px;
-  transition: 0.5s;
-}
-
-.users .header .legend-section > div:hover {
-  font-size: 18px;
-  text-decoration: underline;
+  transition: 0.3s;
 }
 
 .users .header .legend-section > div::before {
@@ -69,6 +65,7 @@
   display: inline-block;
   margin-right: 10px;
   margin-bottom: 1px;
+  transition: 0.3s;
 }
 
 .users .header .legend-section > div:nth-child(1) {
@@ -76,6 +73,11 @@
 }
 
 .users .header .legend-section > div:nth-child(1)::before {
+  border: 1px solid #ffbf00;
+  background-color: #ffbf0050;
+}
+
+.users .header .legend-section > div:nth-child(1):hover:before {
   background-color: #ffbf00;
 }
 
@@ -84,14 +86,23 @@
 }
 
 .users .header .legend-section > div:nth-child(2)::before {
+  border: 1px solid #f56c8c;
+  background-color: #f56c8c50;
+}
+
+.users .header .legend-section > div:nth-child(2):hover:before {
   background-color: #f56c8c;
 }
 
 .users .header .legend-section > div:nth-child(3) {
   color: #44a2eb;
-  /* width: 80px; */
 }
 .users .header .legend-section > div:nth-child(3)::before {
+  border: 1px solid #44a2eb;
+  background-color: #44a2eb50;
+}
+
+.users .header .legend-section > div:nth-child(3):hover:before {
   background-color: #44a2eb;
 }
 
