[set-up] 라이딩 일지 이름 변경

--- a/src/components/Users/RidingRecord/pages/Show.css
+++ b/src/components/Users/RidingRecord/pages/Show.css
@@ -7,11 +7,19 @@
   margin-right: 30px;
 }
 
-.record-show .header-title div a {
+.record-show .header-title div a,
+.record-show .header-title div .edit-btn {
   font-family: "Noto Sans", sans-serif;
   font-size: 23px;
   color: #1383c1;
   text-decoration: none;
+}
+
+.record-show .header-title div .edit-btn {
+  border: none;
+  background: none;
+  cursor: pointer;
+  outline: none;
 }
 
 .record-show .detail {
