[bug-fix] 라이딩 일지, 대시보드 미니 그래프 No Data

--- a/src/components/Users/Dashboard/GraphMini/GraphMiniContents.css
+++ b/src/components/Users/Dashboard/GraphMini/GraphMiniContents.css
@@ -31,3 +31,8 @@
 .graph-mini .contents .this-year {
   padding-top: 10px;
 }
+
+.graph-mini .no-data {
+  font-family: "Noto Sans", sans-serif;
+  margin-top: 10px;
+}
