--- a/src/components/Users/RidingRoute/pages/Create.css
+++ b/src/components/Users/RidingRoute/pages/Create.css
@@ -22,7 +22,7 @@
 
 .route-create .bottom {
   position: relative;
-  height: 550px;
+  height: 700px;
   width: 99%;
   margin: 0 auto;
 }
@@ -34,7 +34,7 @@
 
 .route-create .bottom .map {
   width: 65%;
-  height: 60%;
+  height: 330px;
   transition: 0.5s;
   z-index: 100;
 }
@@ -45,8 +45,14 @@
 }
 
 .route-create .bottom .chart {
-  bottom: 0;
+  top: 330px;
   width: 65%;
-  height: 40%;
+  height: 220px;
   padding-top: 30px;
+}
+
+.route-create .bottom .map-img {
+  top: 550px;
+  border: 1px solid blue;
+  display: none;
 }
