--- a/src/components/Users/RidingRoute/pages/Create.css
+++ b/src/components/Users/RidingRoute/pages/Create.css
@@ -53,6 +53,6 @@
 
 .route-create .bottom .map-img {
   top: 550px;
-  border: 1px solid blue;
+  /* border: 1px solid blue; */
   display: none;
 }
